--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="calculadora">
+        <div class="resposta">Calculadora</div>
         <button class="numeros">1</button>
         <button class="numeros">2</button>
         <button class="numeros">3</button>
@@ -24,9 +25,8 @@
         <button class="operadores">x</button>
         <button class="funcoes">c</button>
         <button class="numeros">0</button>
-        <button class="funcoes">=</button>
+        <button class="funcoes igualdade">=</button>
         <button class="operadores">/</button>
-        <div class="resposta">RAFAELA EU TE AMO</div>
     </div>
     <script src="main.js"></script>
 </body>
